# deepa2

./: .flake  .flake8  .gitignore  CITATION.cff  README.md  code_quality_checks.sh  environment.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  generic.md  new_dataset.md
.github/workflows/: code_quality_checks.yml  run_cc_pytest.yml  run_pytest.yml  run_pytest37.yml
deepa2/: __init__.py  aifdb_builder.py  config.py  core.py  datastructures.py  jinjafilters.py  main.py  nli_builder.py  parsers.py
deepa2/builder/: __init__.py  aifdb_builder.py  arg_kp_builder.py  arg_q_builder.py  core.py  entailmentbank_builder.py  jinjafilters.py  nli_builder.py  pipeline.py  utils.py
deepa2/metrics/: __init__.py  metric_handler.py
deepa2/preptrain/: __init__.py  t2tpreprocessor.py
deepa2/scripts/: build_aifdb.py  build_nli.py
deepa2/testing/: __init__.py  buildertester.py
deepa2datasets/: aifdb_builder.py  builder.py  config.py  core.py  custom_funcs.py  jinjafilters.py  nli_builder.py
deepa2datasets/scripts/: build_aifdb.py  build_nli.py
docs/: README.md  aifdb.md  argkp.md  argq.md  enbank.md  esnli.md
notebooks/: 01-first-notebook.ipynb  01-inspect_esnli.ipynb  02-inspect_aifdb.ipynb  DeepA2ServeExample.ipynb  README.md  testing.ipynb
scripts/: build_nli.py
scripts/da2_metric/: da2_metric.py
templates/aifdb/: source_paraphrase_ca-01.txt  source_paraphrase_ca-02.txt  source_paraphrase_ca-03.txt  source_paraphrase_ca-04.txt  source_paraphrase_ca-05.txt  source_paraphrase_ra-01.txt  source_paraphrase_ra-02.txt
templates/esnli/: argdown_contradiction-01.txt  argdown_contradiction-02.txt  argdown_contradiction-03.txt  argdown_contradiction-04.txt  argdown_entailment-01.txt  argdown_err-01.txt  argdown_err-02.txt  argdown_err-03.txt  argdown_err-04.txt  argdown_err-05.txt  argdown_err-06.txt  argdown_err-07.txt  argdown_err-08.txt  argdown_err-09.txt  argdown_generic.txt  source_paraphrase.txt
tests/: test_aifdb.py  test_arg_kp.py  test_arg_q.py  test_da2datastructures.py  test_director.py  test_enbank.py  test_esnli.py  test_layouter.py  test_metrics.py  test_parser.py  test_t2tpreprocessor.py
