[tool.poetry]
name = "deepa2"
version = "0.1.8"
description = "Cast NLP data as multiangular DeepA2 datasets and integrate these in training pipeline"
authors = ["Gregor Betz <gregor.betz@kit.edu>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/debatelab/deepa2"

[tool.poetry.scripts]
deepa2 = "deepa2.main:app"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "1.3.5"
numpy = "1.21.5"
typer = {extras = ["all"], version = "^0.4.0"}
datasets = "^1.18.0"
Jinja2 = "^3.0.3"
pyarrow = "^6.0.1"
requests = "^2.27.1"
networkx = "^2.6.3"
ttp = "^0.8.4"
sacrebleu = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
matplotlib = "^3.5.1"
pylint = "^2.12.2"
black = "^22.1.0"
flake8 = "^4.0.1"
ipykernel = "^6.7.0"
mypy = "^0.931"
types-requests = "^2.27.8"
pandas-stubs = "^1.2.0"
types-PyYAML = "^6.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
